# cti-stitcher

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.claude/skills/run/: SKILL.md
core/: db.py  models.py  resolution.py
core/ingest/: README.md  attack.py  base.py  ctid_nist80053.py  d3fend.py  malpedia.py  mandiant.py  misp_galaxy.py  registry.py
data/: cti-stitcher.db-journal
dissem/: README.md
docs/adr/: 0000-template.md  0001-sqlite-local-first.md  0002-artifact-based-d3fend-inference.md  0003-no-llm-synthesis.md  0004-three-state-d3fend-posture.md  0005-connector-run-order.md  0006-risk-score-weights.md  0007-enterprise-attack-only.md  0008-malpedia-actors-excluded-from-ranking.md
docs/agents/: domain.md
explorer/: __main__.py  main.py
explorer/api/: actors.py  controls.py  d3fend.py  gap.py  rank.py  report.py  search.py  serializers.py  software.py  sync.py  targeting.py
explorer/ui/: actor.html  control_detail.html  controls.html  d3fend.html  gap_analysis.html  index.html  rank.html  settings.html  software.html  targeting.html
explorer/ui/static/: app.js  style.css
risk_mapper/: README.md
scripts/: update_data.py
